--- a/WebUIBlazor/Pages/ConnectionStatus.razor
+++ b/WebUIBlazor/Pages/ConnectionStatus.razor
@@ -1,5 +1,4 @@
-﻿@inject Data.ConnectionServiceSerial serial
-@inject Data.BackgroundTimer background
+﻿@inject Data.BackgroundTimer background
 
 
 <MudAlert ContentAlignment="HorizontalAlignment.Center" Icon="@Icons.Material.Filled.PrivateConnectivity" Severity="@(Connection ? Severity.Success : Severity.Error)" Variant="Variant.Text">
@@ -7,63 +6,11 @@
 </MudAlert>
 
 
-@if (Data.ConnectionServiceSerial.printerConnection.IsConnected)
-{
-    if (Printing)
-    {
-        <MudProgressLinear Color="Color.Warning" Striped="true" Size="Size.Large" Value="PrintProgress" Class="pb-9">
-            <MudText Typo="Typo.subtitle1" Color="Color.Surface">
-                <b>Printing: @PrintProgress %</b>
-            </MudText>
-        </MudProgressLinear>
-    }
-    else
-    {
-        <MudAlert ContentAlignment="HorizontalAlignment.Center" Severity="@(!PrinterBusy? Severity.Success :  Severity.Warning)" Variant="Variant.Text">
-            @if (PrinterBusy)
-            {
-                <MudProgressLinear Striped="true" Color="Color.Primary" Indeterminate="true" Size="Size.Small" />
-            }
-            @(new MarkupString(!PrinterBusy ? $"Printer is ready" : "Printer Busy... Please wait"))
-        </MudAlert>
-    }
-}
-
 @code {
-
-    protected override void OnInitialized()
-    {
-        base.OnInitialized();
-
-        // Subscribe to the event here.
-        background.BusyStatusChanged += OnBusyChanged;
-    }
 
     [Parameter]
     public bool Connection { get; set; }
 
     [Parameter]
     public string SelectedPrinter { get; set; }
-
-    public bool PrinterBusy { get; set; }
-
-    [Parameter]
-    public bool Printing { get; set; }
-
-    [Parameter]
-    public double PrintProgress { get; set; }
-
-    public void OnBusyChanged()
-    {
-        Task.Run(() =>
-        {
-            PrinterBusy = background.isBusy;
-            InvokeAsync(StateHasChanged);
-        });
-    }
-
-    public void Dispose()
-    {
-        background.BusyStatusChanged -= OnBusyChanged;
-    }
 }
