--- a/WebUIBlazor/Pages/_Layout.cshtml
+++ b/WebUIBlazor/Pages/_Layout.cshtml
@@ -31,7 +31,19 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="plotlyInterop.js"></script>
     <script src="_content/Plotly.Blazor/plotly-latest.min.js" type="text/javascript"></script>
     <script src="_content/Plotly.Blazor/plotly-interop.js" type="text/javascript"></script>
+    <script>
+        window.scrollToBottom = () => {
+            var textarea = document.getElementById('consoleOutput');
+            textarea.scrollTop = textarea.scrollHeight;
+        }
+
+        window.isAtBottom = () => {
+            var textarea = document.getElementById('consoleOutput');
+            return textarea.scrollHeight - textarea.scrollTop === textarea.clientHeight;
+        }
+    </script>
 </body>
 </html>
